# zSpace_3DPSlicer

./: .gitignore  CMakeLists.txt  README.md  build.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
ALICE_PLATFORM/: ALICE.sln  ALICE.vcxproj  ALICE.vcxproj.filters
ALICE_PLATFORM/src/alglib/: alglibinternal.h  alglibmisc.h  ap.h  dataanalysis.h  diffequations.h  fasttransforms.h  integration.h  interpolation.h  linalg.h  optimization.h  solvers.h  specialfunctions.h  statistics.h
ALICE_PLATFORM/src/openGL/: glExtension.h  glext.h
documentation/: zSpace.md  zTsSDFSlicer.md
documentation/Assets/zTsSDFSlicer/: Thumbs.db
examples/: basic_example.py  gpu_eigen_example.py  slicer_demo.py  test_slicer.py  zspace_field.py  zspace_geodesic.py  zspace_slicer.py  zspace_viz.py
src/: compas.h  eigen_ops.cpp  gpu_ops.cpp  primitives.cpp  slicer.cpp  test_slicer.cpp  zSlicer.cpp  zSlicer.h  zSlicer.py  zspace_bindings.cpp
src/z3DPSlicer/: __init__.py  _eigen_ops.cp39-win_amd64.pyd  _gpu_ops.cp39-win_amd64.pyd  _primitives.cp39-win_amd64.pyd  _slicer.cp39-win_amd64.pyd  _test_slicer.cp39-win_amd64.pyd  slicer.py  zField.py  zGraph.py  zMesh.py  zSlicer.py  zUtil.py  zUtils.py
src/z3DPSlicer/datastructures/: zBlock.py
tests/: test_gpu_eigen.py  test_intersection.py  test_zspace_field.py
zspace_alice/userSrc/: sketch_3DPSlicer.cpp  sketch_zspace_Empty.cpp
